mac batch
